<resources>
    <string name="app_name">Assignment2</string>
    <string name="product_type">product type</string>
    <string name="resulttext">Text</string>
    <string name="quantity">Quantity</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="buy">BUY</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="empty"> </string>
    <string name="sNo">No of items</string>
    <string name="product">product</string>
    <string name="price">price</string>
    <string name="History">History</string>
    <string name="Manager">Manager</string>
</resources>