<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/producttype"
        android:layout_width="229dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/product_type"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="107dp"
        android:layout_height="41dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="11dp"
        android:gravity="center"
        android:text="@string/resulttext"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/producttype"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="184dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/quantity"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:ignore="MissingConstraints" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="267dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/newOP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/producttype"
        tools:ignore="MissingConstraints">

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="264dp"
            android:layout_height="51dp"
            android:background="@color/LightBlue"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="137dp">

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textSize="20sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="198dp" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_2"
                android:textSize="20sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="88dp"
                tools:layout_editor_absoluteY="199dp" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textSize="20sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="199dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/LightBlue"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="198dp">

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textSize="20sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="190dp" />

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textSize="20sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="88dp"
                tools:layout_editor_absoluteY="190dp" />

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="89dp"
                android:layout_height="48dp"
                android:text="@string/_6"
                android:textSize="20sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="178dp"
                tools:layout_editor_absoluteY="245dp" />
        </TableRow>


        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/LightBlue"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="256dp">

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                android:textSize="20sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="2dp"
                tools:layout_editor_absoluteY="273dp" />

            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:textSize="20sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="88dp"
                tools:layout_editor_absoluteY="295dp" />

            <Button
                android:id="@+id/button9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_9"
                android:textSize="20sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="296dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/LightBlue"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="256dp">

            <Button
                android:id="@+id/deleteOP"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:textSize="20sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="2dp"
                tools:layout_editor_absoluteY="273dp" />

            <Button
                android:id="@+id/button0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="20sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="90dp"
                tools:layout_editor_absoluteY="344dp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="731dp"
        android:background="@color/colorCell"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/resultText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


    </LinearLayout>


    <ListView
        android:id="@+id/listview"
        android:layout_width="356dp"
        android:layout_height="253dp"
        android:layout_marginEnd="19dp"
        android:divider="@null"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

    </ListView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="131dp"
        android:layout_height="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/price"
        android:textColor="@color/Blue"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/listview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="119dp"
        android:layout_height="32dp"
        android:layout_marginBottom="4dp"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/product"
        android:textColor="@color/Blue"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/listview"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="107dp"
        android:layout_height="32dp"
        android:layout_marginBottom="4dp"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/sNo"
        android:textColor="@color/Blue"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/listview"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <Button
        android:id="@+id/newOP"
        android:layout_width="116dp"
        android:layout_height="203dp"
        android:layout_marginStart="4dp"
        android:text="@string/buy"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/resultText"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/managerOP"
        android:layout_width="166dp"
        android:layout_height="55dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Manager"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newOP"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>